[gd_scene load_steps=8 format=3]

[ext_resource type="Script" path="res://Screens/Levels/Scripts/PollenLevel.gd" id="1_14h1e"]
[ext_resource type="PackedScene" path="res://Entities/Background.tscn" id="2_wagf6"]
[ext_resource type="PackedScene" path="res://Entities/Player/PlayerPollen.tscn" id="3_onfdf"]
[ext_resource type="Theme" uid="uid://bibux11p0isw6" path="res://UI/Main Theme.tres" id="4_yyj21"]
[ext_resource type="FontFile" uid="uid://1ly641ihsl4n" path="res://Font/Kenney Future.ttf" id="5_4jgtn"]

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(300.75, 37.5)

[sub_resource type="FontFile" id="3"]
fallbacks = Array[Font]([ExtResource("5_4jgtn")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0
cache/0/32/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/32/0 = Vector2(0, 0)

[node name="ForestLevel" type="Node2D"]
script = ExtResource("1_14h1e")

[node name="Background" parent="." instance=ExtResource("2_wagf6")]
scale = Vector2(1, 1.01)

[node name="Obstacles" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource("3_onfdf")]
position = Vector2(24, 189)

[node name="KillFloor" type="Area2D" parent="."]
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillFloor"]
position = Vector2(150, 1043)
shape = SubResource("2")

[node name="KillCeiling" type="Area2D" parent="."]
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillCeiling"]
position = Vector2(152, -20)
shape = SubResource("2")

[node name="ObstacleTimer" type="Timer" parent="."]
autostart = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="UI"]
offset_left = 19.0
offset_right = 614.0
offset_bottom = 61.0
theme = ExtResource("4_yyj21")
theme_override_fonts/font = SubResource("3")
text = "Score: 0"

[node name="GameOverMenu" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="UI/GameOverMenu"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.3
grow_horizontal = 2
theme = ExtResource("4_yyj21")
theme_override_font_sizes/font_size = 64
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MessageLabel" type="Label" parent="UI/GameOverMenu"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.35
anchor_right = 1.0
anchor_bottom = 0.55
offset_bottom = 23.0
grow_horizontal = 2
theme = ExtResource("4_yyj21")
horizontal_alignment = 1
autowrap_mode = 2

[node name="RestartButton" type="Button" parent="UI/GameOverMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.65
anchor_right = 0.7
anchor_bottom = 0.75
theme = ExtResource("4_yyj21")
theme_override_font_sizes/font_size = 32
text = "Restart"

[node name="MenuButton" type="Button" parent="UI/GameOverMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.8
anchor_right = 0.7
anchor_bottom = 0.9
theme = ExtResource("4_yyj21")
theme_override_font_sizes/font_size = 32
text = "Menu"

[connection signal="area_entered" from="KillFloor" to="." method="_on_Obstacle_kill_area_entered"]
[connection signal="area_entered" from="KillCeiling" to="." method="_on_Obstacle_kill_area_entered"]
[connection signal="timeout" from="ObstacleTimer" to="." method="_on_obstacle_timer_timeout"]
[connection signal="pressed" from="UI/GameOverMenu/RestartButton" to="." method="_on_btnRestart_pressed"]
[connection signal="pressed" from="UI/GameOverMenu/MenuButton" to="." method="_on_btnReturn_pressed"]
